12-frontend-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1-service
  namespace: three-tier-app
spec:
  selector:
    app: frontend-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
